# djangox

./: .dockerignore  .gitignore  Pipfile  README.md  pyproject.toml  start.sh
core/management/commands/: rename.py
djangox_project/: settings.py
static/css/: base.css
templates/: _base.html
templates/pages/: home.html
users/migrations/: 0001_initial.py
