[tool.poetry]
name = "HF Project Template"
version = "0.1.0"
description = ""
authors = ["harald.fauland@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"
django-allauth = "^0.41.0"
django-crispy-forms = "^1.8.1"
django-debug-toolbar = "^2.2"
whitenoise = "^5.0.1"
gunicorn = "*"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
